--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Bloc Inc",
   "license": "ISC",
   "dependencies": {
+    "angular-google-auth2": "^1.0.8",
     "angular-ui-router": "^0.4.2",
     "hapi": "~16.4.0",
     "inert": "^4.2.0",
