--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-ui-router": "^0.4.2",
     "hapi": "~16.4.0",
     "inert": "^4.2.0",
+    "ng-file-upload": "^12.2.13",
     "path": "^0.4.9",
     "zendesk-node-api": "^1.2.0"
   },
