add Angular CLI to project

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": ">=6.11.1"
   },
   "devDependencies": {
+    "@angular/cli": "^1.6.8",
     "connect-modrewrite": "^0.7.9",
     "es5-shim": "^4.0.1"
   }
