--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   "author": "Bloc Inc",
   "license": "ISC",
   "dependencies": {
+    "@angular/core": "^5.2.4",
+    "@uirouter/angularjs": "^1.0.14",
     "angular-google-auth2": "^1.0.8",
-    "angular-ui-router": "^0.4.2",
-    "hapi": "~16.4.0",
-    "inert": "^4.2.0",
-    "jquery": "^3.2.1",
-    "path": "^0.4.9",
-    "zendesk-node-api": "^1.2.0"
+    "hapi": "^16.6.2",
+    "inert": "^4.2.1",
+    "jquery": "^3.3.1",
+    "json-schema-traverse": "^0.3.1",
+    "path": "^0.4.10",
+    "zendesk-node-api": "^1.3.0"
   },
   "engines": {
     "node": ">=6.11.1"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.8",
     "connect-modrewrite": "^0.7.9",
-    "es5-shim": "^4.0.1"
+    "es5-shim": "^4.5.10",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1"
   }
 }
