--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   },
   "devDependencies": {
     "connect-modrewrite": "^0.7.9",
+    "del": "^3.0.0",
     "es5-shim": "^4.5.10",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0"
   }
 }
