update style of incident & problem buttons, update gulpfile to rename local URLs to remote URLs on production files

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ npm-debug.log
 .sass-cache/
 .DS_Store
 package.json
+package-lock.json
 app/scripts/projectJsFiles.js.map
 app/scripts/projectJsFiles.js
+dist/scripts/projectJsFiles.min.js
